// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`atlassian-semantic > should produce expected file structure and content 1`] = `
{
  "css/tokens.css": "18da04bcaf63e748",
  "js/tokens.js": "9c0c63d41da65e59",
  "json/tokens-dark-comfortable-reduced-motion.json": "f85f0cb4b2dbe7b8",
  "json/tokens-dark-comfortable-standard.json": "3b4ea2be75c2fbaf",
  "json/tokens-dark-compact-reduced-motion.json": "f3ec495cfea539ae",
  "json/tokens-dark-compact-standard.json": "c81e867744b6cd02",
  "json/tokens-dark-cozy-reduced-motion.json": "04a24e83f98676dd",
  "json/tokens-dark-cozy-standard.json": "cfca3811a2ea8ba5",
  "json/tokens-high-contrast-comfortable-reduced-motion.json": "61ef9d5c4328806a",
  "json/tokens-high-contrast-comfortable-standard.json": "75a06647985d43fa",
  "json/tokens-high-contrast-compact-reduced-motion.json": "ee53525b04d1450b",
  "json/tokens-high-contrast-compact-standard.json": "617d91bd37b488a4",
  "json/tokens-high-contrast-cozy-reduced-motion.json": "0cea5ba8d0c50a96",
  "json/tokens-high-contrast-cozy-standard.json": "70b6bd9d8b8d5273",
  "json/tokens-light-comfortable-reduced-motion.json": "49f4a4b12e94f009",
  "json/tokens-light-comfortable-standard.json": "a17684ab2ffeecad",
  "json/tokens-light-compact-reduced-motion.json": "54c9da9d035531b5",
  "json/tokens-light-compact-standard.json": "2509f0499f469411",
  "json/tokens-light-cozy-reduced-motion.json": "6bb19e88fe8bb3f4",
  "json/tokens-light-cozy-standard.json": "8cd3173c9b156c17",
}
`;

exports[`cli-starter > should produce expected output 1`] = `
{
  "base/tokens.css": "/* Set: colors */
/* Color palette and alias colors */
:root {
  /* Primary action color */
  --color-action-brand: var(--color-palette-blue-500);
  /* Primary action hover */
  --color-action-brand-hover: var(--color-palette-blue-600);
  /* Strong/high-contrast action color */
  --color-action-brand-strong: var(--color-palette-blue-600);
  /* Strong action pressed */
  --color-action-brand-strong-active: var(--color-palette-blue-700);
  /* Destructive action color */
  --color-action-danger: var(--color-palette-red-500);
  /* Destructive action hover */
  --color-action-danger-hover: var(--color-palette-red-600);
  /* Subtle brand background */
  --color-background-brand-subtle: var(--color-palette-blue-100);
  /* Subtle danger background */
  --color-background-danger-subtle: var(--color-palette-red-100);
  /* Subtle success background */
  --color-background-success-subtle: var(--color-palette-green-100);
  /* Subtle warning background */
  --color-background-warning-subtle: var(--color-palette-orange-100);
  /* Focused border color */
  --color-border-default-focus: var(--color-palette-blue-500);
  /* Subtle/muted border color */
  --color-border-muted: var(--color-palette-gray-100);
  /* Success icon color */
  --color-icon-success: var(--color-palette-green-500);
  /* Warning icon color */
  --color-icon-warning: var(--color-palette-orange-500);
  /* Modal/dialog overlay */
  --color-overlay-default: #00000080;
  /* Pure black */
  --color-palette-black: #000000;
  /* Light blue for subtle backgrounds */
  --color-palette-blue-100: #deedff;
  /* Primary blue */
  --color-palette-blue-500: #0066cc;
  /* Darker blue for hover states */
  --color-palette-blue-600: #0054ab;
  /* Deep blue for strong/active states */
  --color-palette-blue-700: #00458c;
  /* Lightest gray */
  --color-palette-gray-100: #f5f5f7;
  /* Light gray */
  --color-palette-gray-300: #d6d9db;
  /* Medium-light gray */
  --color-palette-gray-400: #a1a6ab;
  /* Mid gray */
  --color-palette-gray-500: #6b757d;
  /* Dark gray */
  --color-palette-gray-700: #383d45;
  /* Darkest gray */
  --color-palette-gray-900: #1a1c1f;
  /* Light green for subtle backgrounds */
  --color-palette-green-100: #d9f5e0;
  /* Success green */
  --color-palette-green-500: #21ad4d;
  /* Light orange for subtle backgrounds */
  --color-palette-orange-100: #fff2d9;
  /* Warning orange */
  --color-palette-orange-500: #ed941a;
  /* Light red for subtle backgrounds */
  --color-palette-red-100: #ffe6e6;
  /* Lighter red for muted danger text */
  --color-palette-red-400: #f07070;
  /* Error red */
  --color-palette-red-500: #db2626;
  /* Darker red for hover states */
  --color-palette-red-600: #b81c1c;
  /* Pure white */
  --color-palette-white: #ffffff;
  /* Brand-colored text */
  --color-text-brand: var(--color-palette-blue-500);
  /* Danger/error text color */
  --color-text-danger: var(--color-palette-red-500);
  /* Subdued danger text color */
  --color-text-danger-muted: var(--color-palette-red-400);
  /* Text on dark backgrounds */
  --color-text-inverse: var(--color-palette-white);
  /* Disabled text color */
  --color-text-muted-disabled: var(--color-palette-gray-300);
  /* Success text color */
  --color-text-success: var(--color-palette-green-500);
}

/* Set: typography */
/* Font families, sizes, weights, and line heights */
:root {
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", "Fira Code", monospace;
  /* Default sans-serif font stack */
  --font-family-sans: Inter, system-ui, sans-serif;
  --font-line-height-normal: 1.5;
  --font-line-height-relaxed: 1.75;
  --font-line-height-tight: 1.25;
  --font-size-2xl: 1.5rem;
  --font-size-3xl: 2rem;
  --font-size-base: 1rem;
  --font-size-lg: 1.125rem;
  --font-size-sm: 0.875rem;
  --font-size-xl: 1.25rem;
  --font-size-xs: 0.75rem;
  --font-weight-bold: 700;
  --font-weight-medium: 500;
  --font-weight-regular: 400;
  --font-weight-semibold: 600;
  /* Default body text */
  --typography-body-md-fontFamily-0: Inter;
  --typography-body-md-fontFamily-1: system-ui;
  --typography-body-md-fontFamily-2: sans-serif;
  --typography-body-md-fontSize: var(--font-size-base);
  --typography-body-md-fontWeight: var(--font-weight-regular);
  --typography-body-md-letterSpacing: 0rem;
  --typography-body-md-lineHeight: var(--font-line-height-normal);
  /* Small body text / captions */
  --typography-body-sm-fontFamily-0: Inter;
  --typography-body-sm-fontFamily-1: system-ui;
  --typography-body-sm-fontFamily-2: sans-serif;
  --typography-body-sm-fontSize: var(--font-size-sm);
  --typography-body-sm-fontWeight: var(--font-weight-regular);
  --typography-body-sm-letterSpacing: 0rem;
  --typography-body-sm-lineHeight: var(--font-line-height-normal);
  /* Large heading (h1) */
  --typography-heading-lg-fontFamily-0: Inter;
  --typography-heading-lg-fontFamily-1: system-ui;
  --typography-heading-lg-fontFamily-2: sans-serif;
  --typography-heading-lg-fontSize: var(--font-size-3xl);
  --typography-heading-lg-fontWeight: var(--font-weight-bold);
  --typography-heading-lg-letterSpacing: -0.02rem;
  --typography-heading-lg-lineHeight: var(--font-line-height-tight);
  /* Medium heading (h2) */
  --typography-heading-md-fontFamily-0: Inter;
  --typography-heading-md-fontFamily-1: system-ui;
  --typography-heading-md-fontFamily-2: sans-serif;
  --typography-heading-md-fontSize: var(--font-size-2xl);
  --typography-heading-md-fontWeight: var(--font-weight-semibold);
  --typography-heading-md-letterSpacing: -0.01rem;
  --typography-heading-md-lineHeight: var(--font-line-height-tight);
  /* Small heading (h3) */
  --typography-heading-sm-fontFamily-0: Inter;
  --typography-heading-sm-fontFamily-1: system-ui;
  --typography-heading-sm-fontFamily-2: sans-serif;
  --typography-heading-sm-fontSize: var(--font-size-xl);
  --typography-heading-sm-fontWeight: var(--font-weight-semibold);
  --typography-heading-sm-letterSpacing: 0rem;
  --typography-heading-sm-lineHeight: var(--font-line-height-tight);
}

/* Set: spacing */
/* Spacing scale and alias spacing */
:root {
  --spacing-gap-lg: var(--spacing-scale-lg);
  --spacing-gap-md: var(--spacing-scale-md);
  --spacing-gap-sm: var(--spacing-scale-sm);
  --spacing-gap-xl: var(--spacing-scale-xl);
  --spacing-gap-xs: var(--spacing-scale-xs);
  --spacing-inset-lg: var(--spacing-scale-lg);
  --spacing-inset-md: var(--spacing-scale-md);
  --spacing-inset-sm: var(--spacing-scale-sm);
  --spacing-inset-xl: var(--spacing-scale-xl);
  --spacing-inset-xs: var(--spacing-scale-xs);
  --spacing-scale-2xl: 3rem;
  --spacing-scale-lg: 1.5rem;
  --spacing-scale-md: 1rem;
  --spacing-scale-sm: 0.5rem;
  --spacing-scale-xl: 2rem;
  --spacing-scale-xs: 0.25rem;
}

/* Set: effects */
/* Shadows and elevation */
:root {
  /* High elevation (modals, dialogs) */
  --shadow-elevation-lg: var(--shadow-raw-lg);
  /* Medium elevation (dropdowns, popovers) */
  --shadow-elevation-md: var(--shadow-raw-md);
  /* Low elevation (cards, inputs) */
  --shadow-elevation-sm: var(--shadow-raw-sm);
  /* Large shadow for modals and dialogs */
  --shadow-raw-lg: var(--shadow-raw-lg-offsetX) var(--shadow-raw-lg-offsetY)
    var(--shadow-raw-lg-blur) var(--shadow-raw-lg-spread)
    var(--shadow-raw-lg-color);
  --shadow-raw-lg-color: #0000001a;
  --shadow-raw-lg-offsetX: 0px;
  --shadow-raw-lg-offsetY: 10px;
  --shadow-raw-lg-blur: 15px;
  --shadow-raw-lg-spread: -3px;
  /* Medium shadow for dropdowns and popovers */
  --shadow-raw-md: var(--shadow-raw-md-offsetX) var(--shadow-raw-md-offsetY)
    var(--shadow-raw-md-blur) var(--shadow-raw-md-spread)
    var(--shadow-raw-md-color);
  --shadow-raw-md-color: #0000001a;
  --shadow-raw-md-offsetX: 0px;
  --shadow-raw-md-offsetY: 4px;
  --shadow-raw-md-blur: 6px;
  --shadow-raw-md-spread: -1px;
  /* Subtle shadow for cards and inputs */
  --shadow-raw-sm: var(--shadow-raw-sm-offsetX) var(--shadow-raw-sm-offsetY)
    var(--shadow-raw-sm-blur) var(--shadow-raw-sm-spread)
    var(--shadow-raw-sm-color);
  --shadow-raw-sm-color: #0000000d;
  --shadow-raw-sm-offsetX: 0px;
  --shadow-raw-sm-offsetY: 1px;
  --shadow-raw-sm-blur: 2px;
  --shadow-raw-sm-spread: 0px;
}
",
  "dark/tokens.css": ":root {
  /* Dark page background */
  --color-background-default: var(--color-palette-gray-900);
  /* Dark border color */
  --color-border-default: var(--color-palette-gray-700);
  /* Dark surface for cards */
  --color-surface-default: var(--color-palette-gray-700);
  /* Light text on dark background */
  --color-text-default: var(--color-palette-gray-100);
  /* Muted text on dark background */
  --color-text-muted: var(--color-palette-gray-400);
}
",
  "light/tokens.css": ":root {
  /* Light page background */
  --color-background-default: var(--color-palette-white);
  /* Light border color */
  --color-border-default: var(--color-palette-gray-300);
  /* Light surface for cards */
  --color-surface-default: var(--color-palette-gray-100);
  /* Dark text on light background */
  --color-text-default: var(--color-palette-gray-900);
  /* Muted text on light background */
  --color-text-muted: var(--color-palette-gray-500);
}
",
  "tokens.css": "/* Set: colors */
/* Color palette and alias colors */
:root {
  /* Primary action color */
  --color-action-brand: var(--color-palette-blue-500);
  /* Primary action hover */
  --color-action-brand-hover: var(--color-palette-blue-600);
  /* Strong/high-contrast action color */
  --color-action-brand-strong: var(--color-palette-blue-600);
  /* Strong action pressed */
  --color-action-brand-strong-active: var(--color-palette-blue-700);
  /* Destructive action color */
  --color-action-danger: var(--color-palette-red-500);
  /* Destructive action hover */
  --color-action-danger-hover: var(--color-palette-red-600);
  /* Subtle brand background */
  --color-background-brand-subtle: var(--color-palette-blue-100);
  /* Subtle danger background */
  --color-background-danger-subtle: var(--color-palette-red-100);
  /* Subtle success background */
  --color-background-success-subtle: var(--color-palette-green-100);
  /* Subtle warning background */
  --color-background-warning-subtle: var(--color-palette-orange-100);
  /* Focused border color */
  --color-border-default-focus: var(--color-palette-blue-500);
  /* Subtle/muted border color */
  --color-border-muted: var(--color-palette-gray-100);
  /* Success icon color */
  --color-icon-success: var(--color-palette-green-500);
  /* Warning icon color */
  --color-icon-warning: var(--color-palette-orange-500);
  /* Modal/dialog overlay */
  --color-overlay-default: #00000080;
  /* Pure black */
  --color-palette-black: #000000;
  /* Light blue for subtle backgrounds */
  --color-palette-blue-100: #deedff;
  /* Primary blue */
  --color-palette-blue-500: #0066cc;
  /* Darker blue for hover states */
  --color-palette-blue-600: #0054ab;
  /* Deep blue for strong/active states */
  --color-palette-blue-700: #00458c;
  /* Lightest gray */
  --color-palette-gray-100: #f5f5f7;
  /* Light gray */
  --color-palette-gray-300: #d6d9db;
  /* Medium-light gray */
  --color-palette-gray-400: #a1a6ab;
  /* Mid gray */
  --color-palette-gray-500: #6b757d;
  /* Dark gray */
  --color-palette-gray-700: #383d45;
  /* Darkest gray */
  --color-palette-gray-900: #1a1c1f;
  /* Light green for subtle backgrounds */
  --color-palette-green-100: #d9f5e0;
  /* Success green */
  --color-palette-green-500: #21ad4d;
  /* Light orange for subtle backgrounds */
  --color-palette-orange-100: #fff2d9;
  /* Warning orange */
  --color-palette-orange-500: #ed941a;
  /* Light red for subtle backgrounds */
  --color-palette-red-100: #ffe6e6;
  /* Lighter red for muted danger text */
  --color-palette-red-400: #f07070;
  /* Error red */
  --color-palette-red-500: #db2626;
  /* Darker red for hover states */
  --color-palette-red-600: #b81c1c;
  /* Pure white */
  --color-palette-white: #ffffff;
  /* Brand-colored text */
  --color-text-brand: var(--color-palette-blue-500);
  /* Danger/error text color */
  --color-text-danger: var(--color-palette-red-500);
  /* Subdued danger text color */
  --color-text-danger-muted: var(--color-palette-red-400);
  /* Text on dark backgrounds */
  --color-text-inverse: var(--color-palette-white);
  /* Disabled text color */
  --color-text-muted-disabled: var(--color-palette-gray-300);
  /* Success text color */
  --color-text-success: var(--color-palette-green-500);
}


/* Set: typography */
/* Font families, sizes, weights, and line heights */
:root {
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", "Fira Code", monospace;
  /* Default sans-serif font stack */
  --font-family-sans: Inter, system-ui, sans-serif;
  --font-line-height-normal: 1.5;
  --font-line-height-relaxed: 1.75;
  --font-line-height-tight: 1.25;
  --font-size-2xl: 1.5rem;
  --font-size-3xl: 2rem;
  --font-size-base: 1rem;
  --font-size-lg: 1.125rem;
  --font-size-sm: 0.875rem;
  --font-size-xl: 1.25rem;
  --font-size-xs: 0.75rem;
  --font-weight-bold: 700;
  --font-weight-medium: 500;
  --font-weight-regular: 400;
  --font-weight-semibold: 600;
  /* Default body text */
  --typography-body-md-fontFamily-0: Inter;
  --typography-body-md-fontFamily-1: system-ui;
  --typography-body-md-fontFamily-2: sans-serif;
  --typography-body-md-fontSize: var(--font-size-base);
  --typography-body-md-fontWeight: var(--font-weight-regular);
  --typography-body-md-letterSpacing: 0rem;
  --typography-body-md-lineHeight: var(--font-line-height-normal);
  /* Small body text / captions */
  --typography-body-sm-fontFamily-0: Inter;
  --typography-body-sm-fontFamily-1: system-ui;
  --typography-body-sm-fontFamily-2: sans-serif;
  --typography-body-sm-fontSize: var(--font-size-sm);
  --typography-body-sm-fontWeight: var(--font-weight-regular);
  --typography-body-sm-letterSpacing: 0rem;
  --typography-body-sm-lineHeight: var(--font-line-height-normal);
  /* Large heading (h1) */
  --typography-heading-lg-fontFamily-0: Inter;
  --typography-heading-lg-fontFamily-1: system-ui;
  --typography-heading-lg-fontFamily-2: sans-serif;
  --typography-heading-lg-fontSize: var(--font-size-3xl);
  --typography-heading-lg-fontWeight: var(--font-weight-bold);
  --typography-heading-lg-letterSpacing: -0.02rem;
  --typography-heading-lg-lineHeight: var(--font-line-height-tight);
  /* Medium heading (h2) */
  --typography-heading-md-fontFamily-0: Inter;
  --typography-heading-md-fontFamily-1: system-ui;
  --typography-heading-md-fontFamily-2: sans-serif;
  --typography-heading-md-fontSize: var(--font-size-2xl);
  --typography-heading-md-fontWeight: var(--font-weight-semibold);
  --typography-heading-md-letterSpacing: -0.01rem;
  --typography-heading-md-lineHeight: var(--font-line-height-tight);
  /* Small heading (h3) */
  --typography-heading-sm-fontFamily-0: Inter;
  --typography-heading-sm-fontFamily-1: system-ui;
  --typography-heading-sm-fontFamily-2: sans-serif;
  --typography-heading-sm-fontSize: var(--font-size-xl);
  --typography-heading-sm-fontWeight: var(--font-weight-semibold);
  --typography-heading-sm-letterSpacing: 0rem;
  --typography-heading-sm-lineHeight: var(--font-line-height-tight);
}


/* Set: spacing */
/* Spacing scale and alias spacing */
:root {
  --spacing-gap-lg: var(--spacing-scale-lg);
  --spacing-gap-md: var(--spacing-scale-md);
  --spacing-gap-sm: var(--spacing-scale-sm);
  --spacing-gap-xl: var(--spacing-scale-xl);
  --spacing-gap-xs: var(--spacing-scale-xs);
  --spacing-inset-lg: var(--spacing-scale-lg);
  --spacing-inset-md: var(--spacing-scale-md);
  --spacing-inset-sm: var(--spacing-scale-sm);
  --spacing-inset-xl: var(--spacing-scale-xl);
  --spacing-inset-xs: var(--spacing-scale-xs);
  --spacing-scale-2xl: 3rem;
  --spacing-scale-lg: 1.5rem;
  --spacing-scale-md: 1rem;
  --spacing-scale-sm: 0.5rem;
  --spacing-scale-xl: 2rem;
  --spacing-scale-xs: 0.25rem;
}


/* Set: effects */
/* Shadows and elevation */
:root {
  /* High elevation (modals, dialogs) */
  --shadow-elevation-lg: var(--shadow-raw-lg);
  /* Medium elevation (dropdowns, popovers) */
  --shadow-elevation-md: var(--shadow-raw-md);
  /* Low elevation (cards, inputs) */
  --shadow-elevation-sm: var(--shadow-raw-sm);
  /* Large shadow for modals and dialogs */
  --shadow-raw-lg: var(--shadow-raw-lg-offsetX) var(--shadow-raw-lg-offsetY)
    var(--shadow-raw-lg-blur) var(--shadow-raw-lg-spread)
    var(--shadow-raw-lg-color);
  --shadow-raw-lg-color: #0000001a;
  --shadow-raw-lg-offsetX: 0px;
  --shadow-raw-lg-offsetY: 10px;
  --shadow-raw-lg-blur: 15px;
  --shadow-raw-lg-spread: -3px;
  /* Medium shadow for dropdowns and popovers */
  --shadow-raw-md: var(--shadow-raw-md-offsetX) var(--shadow-raw-md-offsetY)
    var(--shadow-raw-md-blur) var(--shadow-raw-md-spread)
    var(--shadow-raw-md-color);
  --shadow-raw-md-color: #0000001a;
  --shadow-raw-md-offsetX: 0px;
  --shadow-raw-md-offsetY: 4px;
  --shadow-raw-md-blur: 6px;
  --shadow-raw-md-spread: -1px;
  /* Subtle shadow for cards and inputs */
  --shadow-raw-sm: var(--shadow-raw-sm-offsetX) var(--shadow-raw-sm-offsetY)
    var(--shadow-raw-sm-blur) var(--shadow-raw-sm-spread)
    var(--shadow-raw-sm-color);
  --shadow-raw-sm-color: #0000000d;
  --shadow-raw-sm-offsetX: 0px;
  --shadow-raw-sm-offsetY: 1px;
  --shadow-raw-sm-blur: 2px;
  --shadow-raw-sm-spread: 0px;
}


/* Modifier: theme=light (default) */
/* Theme variations */
:root {
  /* Light page background */
  --color-background-default: var(--color-palette-white);
  /* Light border color */
  --color-border-default: var(--color-palette-gray-300);
  /* Light surface for cards */
  --color-surface-default: var(--color-palette-gray-100);
  /* Dark text on light background */
  --color-text-default: var(--color-palette-gray-900);
  /* Muted text on light background */
  --color-text-muted: var(--color-palette-gray-500);
}


/* Modifier: theme=dark */
[data-theme="dark"] {
  /* Dark page background */
  --color-background-default: var(--color-palette-gray-900);
  /* Dark border color */
  --color-border-default: var(--color-palette-gray-700);
  /* Dark surface for cards */
  --color-surface-default: var(--color-palette-gray-700);
  /* Light text on dark background */
  --color-text-default: var(--color-palette-gray-100);
  /* Muted text on dark background */
  --color-text-muted: var(--color-palette-gray-400);
}
",
}
`;

exports[`custom-plugins > should produce expected output 1`] = `
{
  "android/values/colors.xml": "<?xml version="1.0" encoding="utf-8"?>
<resources>
  <color name="color_red_100">#ffebedff</color>
  <color name="color_red_500">#f54236ff</color>
  <color name="color_red_900">#b81c1cff</color>
  <color name="color_blue_100">#e3f2fcff</color>
  <color name="color_blue_500">#2196f2ff</color>
  <color name="color_blue_900">#0d47a1ff</color>
  <color name="color_gray_100">#f5f5f5ff</color>
  <color name="color_gray_500">#9e9e9eff</color>
  <color name="color_gray_900">#212121ff</color>
  <color name="button_primary_background">#2196f2ff</color>
  <color name="button_primary_text">#f5f5f5ff</color>
  <color name="button_danger_background">#f54236ff</color>
  <color name="button_danger_text">#f5f5f5ff</color>
  <color name="text_primary">#212121ff</color>
  <color name="text_secondary">#9e9e9eff</color>
</resources>",
  "android/values/dimens.xml": "<?xml version="1.0" encoding="utf-8"?>
<resources>
  <dimen name="spacing_xs">4dp</dimen>
  <dimen name="spacing_sm">8dp</dimen>
  <dimen name="spacing_md">16dp</dimen>
  <dimen name="spacing_lg">24dp</dimen>
  <dimen name="spacing_xl">32dp</dimen>
  <dimen name="fontsize_small">12dp</dimen>
  <dimen name="fontsize_base">16dp</dimen>
  <dimen name="fontsize_large">20dp</dimen>
  <dimen name="button_padding">16dp</dimen>
  <dimen name="text_body">16dp</dimen>
  <dimen name="text_small">12dp</dimen>
  <dimen name="layout_gutter">24dp</dimen>
  <dimen name="layout_margin">16dp</dimen>
</resources>",
  "swift/tokens.swift": "import SwiftUI

enum DesignTokens {
  enum Colors {
    static let colorRed100 = Color(.sRGB, red: 1, green: 0.92, blue: 0.93, opacity: 1)
    static let colorRed500 = Color(.sRGB, red: 0.96, green: 0.26, blue: 0.21, opacity: 1)
    static let colorRed900 = Color(.sRGB, red: 0.72, green: 0.11, blue: 0.11, opacity: 1)
    static let colorBlue100 = Color(.sRGB, red: 0.89, green: 0.95, blue: 0.99, opacity: 1)
    static let colorBlue500 = Color(.sRGB, red: 0.13, green: 0.59, blue: 0.95, opacity: 1)
    static let colorBlue900 = Color(.sRGB, red: 0.05, green: 0.28, blue: 0.63, opacity: 1)
    static let colorGray100 = Color(.sRGB, red: 0.96, green: 0.96, blue: 0.96, opacity: 1)
    static let colorGray500 = Color(.sRGB, red: 0.62, green: 0.62, blue: 0.62, opacity: 1)
    static let colorGray900 = Color(.sRGB, red: 0.13, green: 0.13, blue: 0.13, opacity: 1)
    static let buttonPrimaryBackground = Color(.sRGB, red: 0.13, green: 0.59, blue: 0.95, opacity: 1)
    static let buttonPrimaryText = Color(.sRGB, red: 0.96, green: 0.96, blue: 0.96, opacity: 1)
    static let buttonDangerBackground = Color(.sRGB, red: 0.96, green: 0.26, blue: 0.21, opacity: 1)
    static let buttonDangerText = Color(.sRGB, red: 0.96, green: 0.96, blue: 0.96, opacity: 1)
    static let textPrimary = Color(.sRGB, red: 0.13, green: 0.13, blue: 0.13, opacity: 1)
    static let textSecondary = Color(.sRGB, red: 0.62, green: 0.62, blue: 0.62, opacity: 1)
  }

  enum Dimensions {
    static let spacingXs: CGFloat = 4
    static let spacingSm: CGFloat = 8
    static let spacingMd: CGFloat = 16
    static let spacingLg: CGFloat = 24
    static let spacingXl: CGFloat = 32
    static let fontsizeSmall: CGFloat = 12
    static let fontsizeBase: CGFloat = 16
    static let fontsizeLarge: CGFloat = 20
    static let buttonPadding: CGFloat = 16
    static let textBody: CGFloat = 16
    static let textSmall: CGFloat = 12
    static let layoutGutter: CGFloat = 24
    static let layoutMargin: CGFloat = 16
  }

}",
  "tokens.yaml": "color.red.100:
  value:
    colorSpace: srgb
    components:
      - 1
      - 0.92
      - 0.93
  type: color
color.red.500:
  value:
    colorSpace: srgb
    components:
      - 0.96
      - 0.26
      - 0.21
  type: color
color.red.900:
  value:
    colorSpace: srgb
    components:
      - 0.72
      - 0.11
      - 0.11
  type: color
color.blue.100:
  value:
    colorSpace: srgb
    components:
      - 0.89
      - 0.95
      - 0.99
  type: color
color.blue.500:
  value:
    colorSpace: srgb
    components:
      - 0.13
      - 0.59
      - 0.95
  type: color
color.blue.900:
  value:
    colorSpace: srgb
    components:
      - 0.05
      - 0.28
      - 0.63
  type: color
color.gray.100:
  value:
    colorSpace: srgb
    components:
      - 0.96
      - 0.96
      - 0.96
  type: color
color.gray.500:
  value:
    colorSpace: srgb
    components:
      - 0.62
      - 0.62
      - 0.62
  type: color
color.gray.900:
  value:
    colorSpace: srgb
    components:
      - 0.13
      - 0.13
      - 0.13
  type: color
button.primary.background:
  value:
    colorSpace: srgb
    components:
      - 0.13
      - 0.59
      - 0.95
  type: color
button.primary.text:
  value:
    colorSpace: srgb
    components:
      - 0.96
      - 0.96
      - 0.96
  type: color
button.danger.background:
  value:
    colorSpace: srgb
    components:
      - 0.96
      - 0.26
      - 0.21
  type: color
button.danger.text:
  value:
    colorSpace: srgb
    components:
      - 0.96
      - 0.96
      - 0.96
  type: color
text.primary:
  value:
    colorSpace: srgb
    components:
      - 0.13
      - 0.13
      - 0.13
  type: color
text.secondary:
  value:
    colorSpace: srgb
    components:
      - 0.62
      - 0.62
      - 0.62
  type: color
",
}
`;

exports[`in-memory > should produce expected output 1`] = `
"
> tsx build.ts

Built 5 outputs in memory

--- css ---
/* Set: base */
/* Base design tokens */
:root {
  --color-brand-primary: #0066cc;
  --color-brand-secondary: #663399;
  --color-neutral-black: #000000;
  --color-neutral-white: #ffffff;
  --spacing-base: 1rem;
  --spacing-large: 2rem;
  --spacing-small: 0.5rem;
  --typography-font-family-mono: "Fira Code", monospace;
  --typography-font-family-sans: Inter, system-ui, sans-serif;
}


/* Modifier: theme=light (default) */
/* Color theme variations */
:root {
  --semantic-background: #ffffff;
  --semantic-text: #000000;
}


/* Modifier: theme=dark */
:root {
  --semantic-background: #000000;
  --semantic-text: #ffffff;
}


--- json ---
{
  "color.brand.primary": { "colorSpace": "srgb", "components": [0, 0.4, 0.8] },
  "color.brand.secondary": {
    "colorSpace": "srgb",
    "components": [0.4, 0.2, 0.6]
  },
  "color.neutral.black": { "colorSpace": "srgb", "components": [0, 0, 0] },
  "color.neutral.white": { "colorSpace": "srgb", "components": [1, 1, 1] },
  "semantic.background": { "colorSpace": "srgb", "components": [1, 1, 1] },
  "semantic.text": { "colorSpace": "srgb", "components": [0, 0, 0] },
  "spacing.base": { "value": 16, "unit": "px" },
  "spacing.large": { "value": 32, "unit": "px" },
  "spacing.small": { "value": 8, "unit": "px" },
  "typography.fontFamily.mono": ["Fira Code", "monospace"],
  "typography.fontFamily.sans": ["Inter", "system-ui", "sans-serif"]
}


--- json ---
{
  "color.brand.primary": { "colorSpace": "srgb", "components": [0, 0.4, 0.8] },
  "color.brand.secondary": {
    "colorSpace": "srgb",
    "components": [0.4, 0.2, 0.6]
  },
  "color.neutral.black": { "colorSpace": "srgb", "components": [0, 0, 0] },
  "color.neutral.white": { "colorSpace": "srgb", "components": [1, 1, 1] },
  "semantic.background": { "colorSpace": "srgb", "components": [0, 0, 0] },
  "semantic.text": { "colorSpace": "srgb", "components": [1, 1, 1] },
  "spacing.base": { "value": 16, "unit": "px" },
  "spacing.large": { "value": 32, "unit": "px" },
  "spacing.small": { "value": 8, "unit": "px" },
  "typography.fontFamily.mono": ["Fira Code", "monospace"],
  "typography.fontFamily.sans": ["Inter", "system-ui", "sans-serif"]
}


--- js ---
const tokens = {
  color: {
    brand: {
      primary: {
        colorSpace: 'srgb',
        components: [0, 0.4, 0.8],
      },
      secondary: {
        colorSpace: 'srgb',
        components: [0.4, 0.2, 0.6],
      },
    },
    neutral: {
      black: {
        colorSpace: 'srgb',
        components: [0, 0, 0],
      },
      white: {
        colorSpace: 'srgb',
        components: [1, 1, 1],
      },
    },
  },
  semantic: {
    background: {
      colorSpace: 'srgb',
      components: [1, 1, 1],
    },
    text: {
      colorSpace: 'srgb',
      components: [0, 0, 0],
    },
  },
  spacing: {
    base: {
      unit: 'px',
      value: 16,
    },
    large: {
      unit: 'px',
      value: 32,
    },
    small: {
      unit: 'px',
      value: 8,
    },
  },
  typography: {
    fontFamily: {
      mono: ['Fira Code', 'monospace'],
      sans: ['Inter', 'system-ui', 'sans-serif'],
    },
  },
}

export default tokens


--- js ---
const tokens = {
  color: {
    brand: {
      primary: {
        colorSpace: 'srgb',
        components: [0, 0.4, 0.8],
      },
      secondary: {
        colorSpace: 'srgb',
        components: [0.4, 0.2, 0.6],
      },
    },
    neutral: {
      black: {
        colorSpace: 'srgb',
        components: [0, 0, 0],
      },
      white: {
        colorSpace: 'srgb',
        components: [1, 1, 1],
      },
    },
  },
  semantic: {
    background: {
      colorSpace: 'srgb',
      components: [0, 0, 0],
    },
    text: {
      colorSpace: 'srgb',
      components: [1, 1, 1],
    },
  },
  spacing: {
    base: {
      unit: 'px',
      value: 16,
    },
    large: {
      unit: 'px',
      value: 32,
    },
    small: {
      unit: 'px',
      value: 8,
    },
  },
  typography: {
    fontFamily: {
      mono: ['Fira Code', 'monospace'],
      sans: ['Inter', 'system-ui', 'sans-serif'],
    },
  },
}

export default tokens


Light background: {"colorSpace":"srgb","components":[1,1,1]}
Dark background: {"colorSpace":"srgb","components":[0,0,0]}

2 permutation(s):
  theme=light (11 tokens)
  theme=dark (11 tokens)
"
`;

exports[`multi-brand > should produce expected file structure and content 1`] = `
{
  "css/tokens.css": "888bc604f0474d81",
  "js-bundle/tokens.js": "f58ed41af27cf120",
  "js/tokens-dark-partner-a.js": "a1698260941cf4d3",
  "js/tokens-dark-partner-b.js": "a3bed48f0f779005",
  "js/tokens-dark-primary.js": "12df33b18905ea33",
  "js/tokens-high-contrast-partner-a.js": "b4dd0316a05af5fc",
  "js/tokens-high-contrast-partner-b.js": "b7ccdf4059724544",
  "js/tokens-high-contrast-primary.js": "1ed20e6a9af1a239",
  "js/tokens-light-partner-a.js": "2038a006ff714131",
  "js/tokens-light-partner-b.js": "eabc0015d53d44ad",
  "js/tokens-light-primary.js": "06ceffa6e1305e19",
  "json-bundle/tokens.json": "089e0075769a8f50",
  "json/tokens-dark-partner-a.json": "be428a18e38f6823",
  "json/tokens-dark-partner-b.json": "fd8c3768f830c26f",
  "json/tokens-dark-primary.json": "b06487ef8f889469",
  "json/tokens-high-contrast-partner-a.json": "7538e64979e5d705",
  "json/tokens-high-contrast-partner-b.json": "3fc6f4844d5b04ae",
  "json/tokens-high-contrast-primary.json": "91b8686f7931fa3a",
  "json/tokens-light-partner-a.json": "5ff33ce6bd9d7e8f",
  "json/tokens-light-partner-b.json": "b7484cf88d01d061",
  "json/tokens-light-primary.json": "202739c6df306413",
  "types/tokens.d.ts": "0bce11e1d0b710b5",
}
`;

exports[`multi-format > should produce expected file structure and content 1`] = `
{
  "tokens-dark-desktop-comfortable.json": "caa231d20e4371fa",
  "tokens-dark-desktop-compact.json": "b597f7a5f94e119f",
  "tokens-dark-mobile-comfortable.json": "0c310744a002a54a",
  "tokens-dark-mobile-compact.json": "aff49ce13a533ba5",
  "tokens-forest-desktop-comfortable.json": "d51edb11a727c46d",
  "tokens-forest-desktop-compact.json": "36dbb8142491b007",
  "tokens-forest-mobile-comfortable.json": "3f78f040af81fab8",
  "tokens-forest-mobile-compact.json": "f063a8bb3848d704",
  "tokens-high-contrast-desktop-comfortable.json": "f89685e1668ced95",
  "tokens-high-contrast-desktop-compact.json": "8bd45392afd1e0a7",
  "tokens-high-contrast-mobile-comfortable.json": "90c95bc4de8d0e73",
  "tokens-high-contrast-mobile-compact.json": "8bd45392afd1e0a7",
  "tokens-light-desktop-comfortable.json": "9a7163d861b7d557",
  "tokens-light-desktop-compact.json": "4a98425aeb6d961b",
  "tokens-light-mobile-comfortable.json": "519ff57d1c8583f8",
  "tokens-light-mobile-compact.json": "ef96a1a008b87b89",
  "tokens-mod-base.css": "a4d82abf75a407d9",
  "tokens-mod-density-comfortable-platform-desktop-theme-dark.css": "b9bd2852fc27578f",
  "tokens-mod-density-comfortable-platform-desktop-theme-forest.css": "d2b9e914b8f8711e",
  "tokens-mod-density-comfortable-platform-desktop-theme-high-contrast.css": "07a22daeb45ba1fd",
  "tokens-mod-density-comfortable-platform-desktop-theme-light.css": "39ea9e1e36f880c1",
  "tokens-mod-density-comfortable-platform-mobile-theme-light.css": "b7310a0cc13a6601",
  "tokens-mod-density-compact-platform-desktop-theme-light.css": "ebaa4e52395a2c72",
  "tokens.css": "24d076b10abe5e4f",
  "tokens.d.ts": "5d9a9694a7434552",
  "tokens.js": "081c4d6c286c3ecf",
  "tokens.light-desktop-comfortable.my-renderer.json": "adcbeb3431abebd7",
}
`;

exports[`multi-platform > should produce expected file structure and content 1`] = `
{
  "android/DesignTokens-dark.kt": "875c9bfc1ed3d0f1",
  "android/DesignTokens-light.kt": "a254f65d210c7a1d",
  "ios/DesignTokens-dark.swift": "70b9df100227eb85",
  "ios/DesignTokens-light.swift": "a89cb28fce0651e2",
  "tailwind/theme.css": "2eff5a1ac0851f9f",
  "web/tokens.css": "d29f987436db1377",
}
`;

exports[`split-by-type > should produce expected output 1`] = `
{
  "css/colors.css": "/* Set: core */
/* Core tokens (base and alias) */
:root {
  /* Primary action color */
  --color-alias-primary: var(--color-base-blue);
  /* Pure black */
  --color-base-black: #000000;
  /* Primary brand blue */
  --color-base-blue: #0066cc;
  /* Neutral gray */
  --color-base-gray: #6b757d;
  /* Pure white */
  --color-base-white: #ffffff;
}


/* Modifier: theme=light (default) */
/* Theme variations */
:root {
  /* Light background */
  --color-alias-background: var(--color-base-white);
  /* Dark text on light background */
  --color-alias-text: var(--color-base-black);
}


/* Modifier: theme=dark */
[data-theme="dark"] {
  /* Dark background */
  --color-alias-background: var(--color-base-black);
  /* Light text on dark background */
  --color-alias-text: var(--color-base-white);
}
",
  "css/spacings.css": "/* Set: core */
/* Core tokens (base and alias) */
:root {
  /* Large spacing */
  --spacing-alias-large: 32px;
  /* Medium spacing */
  --spacing-alias-medium: 16px;
  /* Small spacing */
  --spacing-alias-small: 8px;
  --spacing-base-1: 4px;
  --spacing-base-2: 8px;
  --spacing-base-3: 12px;
  --spacing-base-4: 16px;
  --spacing-base-6: 24px;
  --spacing-base-8: 32px;
}


/* Modifier: theme=dark */
[data-theme="dark"] {
  /* Large spacing */
  --spacing-alias-large: 32px;
  /* Medium spacing */
  --spacing-alias-medium: 16px;
  /* Small spacing */
  --spacing-alias-small: 8px;
  --spacing-base-1: 4px;
  --spacing-base-2: 8px;
  --spacing-base-3: 12px;
  --spacing-base-4: 16px;
  --spacing-base-6: 24px;
  --spacing-base-8: 32px;
}
",
  "css/typography.css": "/* Set: core */
/* Core tokens (base and alias) */
:root {
  /* Body text font */
  --font-alias-body: Inter, system-ui, sans-serif;
  /* Code font */
  --font-alias-code: "JetBrains Mono", Menlo, monospace;
  /* Body text size */
  --font-alias-size-body: 1rem;
  /* Heading text size */
  --font-alias-size-heading: 2.25rem;
  /* Body text weight */
  --font-alias-weight-body: 400;
  /* Heading text weight */
  --font-alias-weight-heading: 700;
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", Menlo, monospace;
  /* Sans-serif font stack for UI and body text */
  --font-family-sans: Inter, system-ui, sans-serif;
  /* 2X large - 36px */
  --font-size-2xl: 2.25rem;
  /* Base - 16px */
  --font-size-base: 1rem;
  /* Large - 20px */
  --font-size-lg: 1.25rem;
  /* Small - 14px */
  --font-size-sm: 0.875rem;
  /* Extra large - 24px */
  --font-size-xl: 1.5rem;
  /* Bold weight */
  --font-weight-bold: 700;
  /* Medium weight */
  --font-weight-medium: 500;
  /* Normal/regular weight */
  --font-weight-normal: 400;
  /* Semibold weight */
  --font-weight-semibold: 600;
}


/* Modifier: theme=dark */
[data-theme="dark"] {
  /* Body text font */
  --font-alias-body: Inter, system-ui, sans-serif;
  /* Code font */
  --font-alias-code: "JetBrains Mono", Menlo, monospace;
  /* Body text size */
  --font-alias-size-body: 1rem;
  /* Heading text size */
  --font-alias-size-heading: 2.25rem;
  /* Body text weight */
  --font-alias-weight-body: 400;
  /* Heading text weight */
  --font-alias-weight-heading: 700;
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", Menlo, monospace;
  /* Sans-serif font stack for UI and body text */
  --font-family-sans: Inter, system-ui, sans-serif;
  /* 2X large - 36px */
  --font-size-2xl: 2.25rem;
  /* Base - 16px */
  --font-size-base: 1rem;
  /* Large - 20px */
  --font-size-lg: 1.25rem;
  /* Small - 14px */
  --font-size-sm: 0.875rem;
  /* Extra large - 24px */
  --font-size-xl: 1.5rem;
  /* Bold weight */
  --font-weight-bold: 700;
  /* Medium weight */
  --font-weight-medium: 500;
  /* Normal/regular weight */
  --font-weight-normal: 400;
  /* Semibold weight */
  --font-weight-semibold: 600;
}
",
}
`;

exports[`typescript-starter > should produce expected output 1`] = `
{
  "base/tokens.css": "/* Set: colors */
/* Color palette and alias colors */
:root {
  /* Primary action color */
  --color-action-brand: var(--color-palette-blue-500);
  /* Primary action hover */
  --color-action-brand-hover: var(--color-palette-blue-600);
  /* Strong/high-contrast action color */
  --color-action-brand-strong: var(--color-palette-blue-600);
  /* Strong action pressed */
  --color-action-brand-strong-active: var(--color-palette-blue-600);
  /* Destructive action color */
  --color-action-danger: var(--color-palette-red-500);
  /* Destructive action hover */
  --color-action-danger-hover: var(--color-palette-red-600);
  /* Subtle brand background */
  --color-background-brand-subtle: var(--color-palette-blue-100);
  /* Subtle danger background */
  --color-background-danger-subtle: var(--color-palette-red-100);
  /* Subtle success background */
  --color-background-success-subtle: var(--color-palette-green-100);
  /* Subtle warning background */
  --color-background-warning-subtle: var(--color-palette-orange-100);
  /* Focused border color */
  --color-border-default-focus: var(--color-palette-blue-500);
  /* Subtle/muted border color */
  --color-border-muted: var(--color-palette-gray-100);
  /* Success icon color */
  --color-icon-success: var(--color-palette-green-500);
  /* Warning icon color */
  --color-icon-warning: var(--color-palette-orange-500);
  /* Modal/dialog overlay */
  --color-overlay-default: #00000080;
  /* Pure black */
  --color-palette-black: #000000;
  /* Light blue for subtle backgrounds */
  --color-palette-blue-100: #deedff;
  /* Primary blue */
  --color-palette-blue-500: #0066cc;
  /* Darker blue for hover states */
  --color-palette-blue-600: #0054ab;
  /* Deep blue for strong/active states */
  --color-palette-blue-700: #00458c;
  /* Lightest gray */
  --color-palette-gray-100: #f5f5f7;
  /* Light gray */
  --color-palette-gray-300: #d6d9db;
  /* Medium-light gray */
  --color-palette-gray-400: #a1a6ab;
  /* Mid gray */
  --color-palette-gray-500: #6b757d;
  /* Dark gray */
  --color-palette-gray-700: #383d45;
  /* Darkest gray */
  --color-palette-gray-900: #1a1c1f;
  /* Light green for subtle backgrounds */
  --color-palette-green-100: #d9f5e0;
  /* Success green */
  --color-palette-green-500: #21ad4d;
  /* Light orange for subtle backgrounds */
  --color-palette-orange-100: #fff2d9;
  /* Warning orange */
  --color-palette-orange-500: #ed941a;
  /* Light red for subtle backgrounds */
  --color-palette-red-100: #ffe6e6;
  /* Lighter red for muted danger text */
  --color-palette-red-400: #f07070;
  /* Error red */
  --color-palette-red-500: #db2626;
  /* Darker red for hover states */
  --color-palette-red-600: #b81c1c;
  /* Pure white */
  --color-palette-white: #ffffff;
  /* Brand-colored text */
  --color-text-brand: var(--color-palette-blue-500);
  /* Danger/error text color */
  --color-text-danger: var(--color-palette-red-500);
  /* Subdued danger text color */
  --color-text-danger-muted: var(--color-palette-red-600);
  /* Text on dark backgrounds */
  --color-text-inverse: var(--color-palette-white);
  /* Disabled text color */
  --color-text-muted-disabled: var(--color-palette-gray-300);
  /* Success text color */
  --color-text-success: var(--color-palette-green-500);
}

/* Set: typography */
/* Font families, sizes, weights, and line heights */
:root {
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", "Fira Code", monospace;
  /* Default sans-serif font stack */
  --font-family-sans: Inter, system-ui, sans-serif;
  --font-line-height-normal: 1.5;
  --font-line-height-relaxed: 1.75;
  --font-line-height-tight: 1.25;
  --font-size-2xl: 1.5rem;
  --font-size-3xl: 2rem;
  --font-size-base: 1rem;
  --font-size-lg: 1.125rem;
  --font-size-sm: 0.875rem;
  --font-size-xl: 1.25rem;
  --font-size-xs: 0.75rem;
  --font-weight-bold: 700;
  --font-weight-medium: 500;
  --font-weight-regular: 400;
  --font-weight-semibold: 600;
  /* Default body text */
  --typography-body-md-fontFamily-0: Inter;
  --typography-body-md-fontFamily-1: system-ui;
  --typography-body-md-fontFamily-2: sans-serif;
  --typography-body-md-fontSize: var(--font-size-base);
  --typography-body-md-fontWeight: var(--font-weight-regular);
  --typography-body-md-letterSpacing: 0rem;
  --typography-body-md-lineHeight: var(--font-line-height-normal);
  /* Small body text / captions */
  --typography-body-sm-fontFamily-0: Inter;
  --typography-body-sm-fontFamily-1: system-ui;
  --typography-body-sm-fontFamily-2: sans-serif;
  --typography-body-sm-fontSize: var(--font-size-sm);
  --typography-body-sm-fontWeight: var(--font-weight-regular);
  --typography-body-sm-letterSpacing: 0rem;
  --typography-body-sm-lineHeight: var(--font-line-height-normal);
  /* Large heading (h1) */
  --typography-heading-lg-fontFamily-0: Inter;
  --typography-heading-lg-fontFamily-1: system-ui;
  --typography-heading-lg-fontFamily-2: sans-serif;
  --typography-heading-lg-fontSize: var(--font-size-3xl);
  --typography-heading-lg-fontWeight: var(--font-weight-bold);
  --typography-heading-lg-letterSpacing: -0.02rem;
  --typography-heading-lg-lineHeight: var(--font-line-height-tight);
  /* Medium heading (h2) */
  --typography-heading-md-fontFamily-0: Inter;
  --typography-heading-md-fontFamily-1: system-ui;
  --typography-heading-md-fontFamily-2: sans-serif;
  --typography-heading-md-fontSize: var(--font-size-2xl);
  --typography-heading-md-fontWeight: var(--font-weight-semibold);
  --typography-heading-md-letterSpacing: -0.01rem;
  --typography-heading-md-lineHeight: var(--font-line-height-tight);
  /* Small heading (h3) */
  --typography-heading-sm-fontFamily-0: Inter;
  --typography-heading-sm-fontFamily-1: system-ui;
  --typography-heading-sm-fontFamily-2: sans-serif;
  --typography-heading-sm-fontSize: var(--font-size-xl);
  --typography-heading-sm-fontWeight: var(--font-weight-semibold);
  --typography-heading-sm-letterSpacing: 0rem;
  --typography-heading-sm-lineHeight: var(--font-line-height-tight);
}

/* Set: spacing */
/* Spacing scale and alias spacing */
:root {
  --spacing-gap-lg: var(--spacing-scale-lg);
  --spacing-gap-md: var(--spacing-scale-md);
  --spacing-gap-sm: var(--spacing-scale-sm);
  --spacing-gap-xl: var(--spacing-scale-xl);
  --spacing-gap-xs: var(--spacing-scale-xs);
  --spacing-inset-lg: var(--spacing-scale-lg);
  --spacing-inset-md: var(--spacing-scale-md);
  --spacing-inset-sm: var(--spacing-scale-sm);
  --spacing-inset-xl: var(--spacing-scale-xl);
  --spacing-inset-xs: var(--spacing-scale-xs);
  --spacing-scale-2xl: 3rem;
  --spacing-scale-lg: 1.5rem;
  --spacing-scale-md: 1rem;
  --spacing-scale-sm: 0.5rem;
  --spacing-scale-xl: 2rem;
  --spacing-scale-xs: 0.25rem;
}

/* Set: effects */
/* Shadows and elevation */
:root {
  /* High elevation (modals, dialogs) */
  --shadow-elevation-lg: var(--shadow-raw-lg);
  /* Medium elevation (dropdowns, popovers) */
  --shadow-elevation-md: var(--shadow-raw-md);
  /* Low elevation (cards, inputs) */
  --shadow-elevation-sm: var(--shadow-raw-sm);
  /* Large shadow for modals and dialogs */
  --shadow-raw-lg: var(--shadow-raw-lg-offsetX) var(--shadow-raw-lg-offsetY)
    var(--shadow-raw-lg-blur) var(--shadow-raw-lg-spread)
    var(--shadow-raw-lg-color);
  --shadow-raw-lg-color: #0000001a;
  --shadow-raw-lg-offsetX: 0px;
  --shadow-raw-lg-offsetY: 10px;
  --shadow-raw-lg-blur: 15px;
  --shadow-raw-lg-spread: -3px;
  /* Medium shadow for dropdowns and popovers */
  --shadow-raw-md: var(--shadow-raw-md-offsetX) var(--shadow-raw-md-offsetY)
    var(--shadow-raw-md-blur) var(--shadow-raw-md-spread)
    var(--shadow-raw-md-color);
  --shadow-raw-md-color: #0000001a;
  --shadow-raw-md-offsetX: 0px;
  --shadow-raw-md-offsetY: 4px;
  --shadow-raw-md-blur: 6px;
  --shadow-raw-md-spread: -1px;
  /* Subtle shadow for cards and inputs */
  --shadow-raw-sm: var(--shadow-raw-sm-offsetX) var(--shadow-raw-sm-offsetY)
    var(--shadow-raw-sm-blur) var(--shadow-raw-sm-spread)
    var(--shadow-raw-sm-color);
  --shadow-raw-sm-color: #0000000d;
  --shadow-raw-sm-offsetX: 0px;
  --shadow-raw-sm-offsetY: 1px;
  --shadow-raw-sm-blur: 2px;
  --shadow-raw-sm-spread: 0px;
}
",
  "dark/tokens.css": ":root {
  /* Dark page background */
  --color-background-default: var(--color-palette-gray-900);
  /* Dark border color */
  --color-border-default: var(--color-palette-gray-700);
  /* Dark surface for cards */
  --color-surface-default: var(--color-palette-gray-700);
  /* Light text on dark background */
  --color-text-default: var(--color-palette-gray-100);
  /* Muted text on dark background */
  --color-text-muted: var(--color-palette-gray-400);
}
",
  "light/tokens.css": ":root {
  /* Light page background */
  --color-background-default: var(--color-palette-white);
  /* Light border color */
  --color-border-default: var(--color-palette-gray-300);
  /* Light surface for cards */
  --color-surface-default: var(--color-palette-gray-100);
  /* Dark text on light background */
  --color-text-default: var(--color-palette-gray-900);
  /* Muted text on light background */
  --color-text-muted: var(--color-palette-gray-500);
}
",
  "tokens.css": "/* Set: colors */
/* Color palette and alias colors */
:root {
  /* Primary action color */
  --color-action-brand: var(--color-palette-blue-500);
  /* Primary action hover */
  --color-action-brand-hover: var(--color-palette-blue-600);
  /* Strong/high-contrast action color */
  --color-action-brand-strong: var(--color-palette-blue-600);
  /* Strong action pressed */
  --color-action-brand-strong-active: var(--color-palette-blue-600);
  /* Destructive action color */
  --color-action-danger: var(--color-palette-red-500);
  /* Destructive action hover */
  --color-action-danger-hover: var(--color-palette-red-600);
  /* Subtle brand background */
  --color-background-brand-subtle: var(--color-palette-blue-100);
  /* Subtle danger background */
  --color-background-danger-subtle: var(--color-palette-red-100);
  /* Subtle success background */
  --color-background-success-subtle: var(--color-palette-green-100);
  /* Subtle warning background */
  --color-background-warning-subtle: var(--color-palette-orange-100);
  /* Focused border color */
  --color-border-default-focus: var(--color-palette-blue-500);
  /* Subtle/muted border color */
  --color-border-muted: var(--color-palette-gray-100);
  /* Success icon color */
  --color-icon-success: var(--color-palette-green-500);
  /* Warning icon color */
  --color-icon-warning: var(--color-palette-orange-500);
  /* Modal/dialog overlay */
  --color-overlay-default: #00000080;
  /* Pure black */
  --color-palette-black: #000000;
  /* Light blue for subtle backgrounds */
  --color-palette-blue-100: #deedff;
  /* Primary blue */
  --color-palette-blue-500: #0066cc;
  /* Darker blue for hover states */
  --color-palette-blue-600: #0054ab;
  /* Deep blue for strong/active states */
  --color-palette-blue-700: #00458c;
  /* Lightest gray */
  --color-palette-gray-100: #f5f5f7;
  /* Light gray */
  --color-palette-gray-300: #d6d9db;
  /* Medium-light gray */
  --color-palette-gray-400: #a1a6ab;
  /* Mid gray */
  --color-palette-gray-500: #6b757d;
  /* Dark gray */
  --color-palette-gray-700: #383d45;
  /* Darkest gray */
  --color-palette-gray-900: #1a1c1f;
  /* Light green for subtle backgrounds */
  --color-palette-green-100: #d9f5e0;
  /* Success green */
  --color-palette-green-500: #21ad4d;
  /* Light orange for subtle backgrounds */
  --color-palette-orange-100: #fff2d9;
  /* Warning orange */
  --color-palette-orange-500: #ed941a;
  /* Light red for subtle backgrounds */
  --color-palette-red-100: #ffe6e6;
  /* Lighter red for muted danger text */
  --color-palette-red-400: #f07070;
  /* Error red */
  --color-palette-red-500: #db2626;
  /* Darker red for hover states */
  --color-palette-red-600: #b81c1c;
  /* Pure white */
  --color-palette-white: #ffffff;
  /* Brand-colored text */
  --color-text-brand: var(--color-palette-blue-500);
  /* Danger/error text color */
  --color-text-danger: var(--color-palette-red-500);
  /* Subdued danger text color */
  --color-text-danger-muted: var(--color-palette-red-600);
  /* Text on dark backgrounds */
  --color-text-inverse: var(--color-palette-white);
  /* Disabled text color */
  --color-text-muted-disabled: var(--color-palette-gray-300);
  /* Success text color */
  --color-text-success: var(--color-palette-green-500);
}


/* Set: typography */
/* Font families, sizes, weights, and line heights */
:root {
  /* Monospace font stack for code */
  --font-family-mono: "JetBrains Mono", "Fira Code", monospace;
  /* Default sans-serif font stack */
  --font-family-sans: Inter, system-ui, sans-serif;
  --font-line-height-normal: 1.5;
  --font-line-height-relaxed: 1.75;
  --font-line-height-tight: 1.25;
  --font-size-2xl: 1.5rem;
  --font-size-3xl: 2rem;
  --font-size-base: 1rem;
  --font-size-lg: 1.125rem;
  --font-size-sm: 0.875rem;
  --font-size-xl: 1.25rem;
  --font-size-xs: 0.75rem;
  --font-weight-bold: 700;
  --font-weight-medium: 500;
  --font-weight-regular: 400;
  --font-weight-semibold: 600;
  /* Default body text */
  --typography-body-md-fontFamily-0: Inter;
  --typography-body-md-fontFamily-1: system-ui;
  --typography-body-md-fontFamily-2: sans-serif;
  --typography-body-md-fontSize: var(--font-size-base);
  --typography-body-md-fontWeight: var(--font-weight-regular);
  --typography-body-md-letterSpacing: 0rem;
  --typography-body-md-lineHeight: var(--font-line-height-normal);
  /* Small body text / captions */
  --typography-body-sm-fontFamily-0: Inter;
  --typography-body-sm-fontFamily-1: system-ui;
  --typography-body-sm-fontFamily-2: sans-serif;
  --typography-body-sm-fontSize: var(--font-size-sm);
  --typography-body-sm-fontWeight: var(--font-weight-regular);
  --typography-body-sm-letterSpacing: 0rem;
  --typography-body-sm-lineHeight: var(--font-line-height-normal);
  /* Large heading (h1) */
  --typography-heading-lg-fontFamily-0: Inter;
  --typography-heading-lg-fontFamily-1: system-ui;
  --typography-heading-lg-fontFamily-2: sans-serif;
  --typography-heading-lg-fontSize: var(--font-size-3xl);
  --typography-heading-lg-fontWeight: var(--font-weight-bold);
  --typography-heading-lg-letterSpacing: -0.02rem;
  --typography-heading-lg-lineHeight: var(--font-line-height-tight);
  /* Medium heading (h2) */
  --typography-heading-md-fontFamily-0: Inter;
  --typography-heading-md-fontFamily-1: system-ui;
  --typography-heading-md-fontFamily-2: sans-serif;
  --typography-heading-md-fontSize: var(--font-size-2xl);
  --typography-heading-md-fontWeight: var(--font-weight-semibold);
  --typography-heading-md-letterSpacing: -0.01rem;
  --typography-heading-md-lineHeight: var(--font-line-height-tight);
  /* Small heading (h3) */
  --typography-heading-sm-fontFamily-0: Inter;
  --typography-heading-sm-fontFamily-1: system-ui;
  --typography-heading-sm-fontFamily-2: sans-serif;
  --typography-heading-sm-fontSize: var(--font-size-xl);
  --typography-heading-sm-fontWeight: var(--font-weight-semibold);
  --typography-heading-sm-letterSpacing: 0rem;
  --typography-heading-sm-lineHeight: var(--font-line-height-tight);
}


/* Set: spacing */
/* Spacing scale and alias spacing */
:root {
  --spacing-gap-lg: var(--spacing-scale-lg);
  --spacing-gap-md: var(--spacing-scale-md);
  --spacing-gap-sm: var(--spacing-scale-sm);
  --spacing-gap-xl: var(--spacing-scale-xl);
  --spacing-gap-xs: var(--spacing-scale-xs);
  --spacing-inset-lg: var(--spacing-scale-lg);
  --spacing-inset-md: var(--spacing-scale-md);
  --spacing-inset-sm: var(--spacing-scale-sm);
  --spacing-inset-xl: var(--spacing-scale-xl);
  --spacing-inset-xs: var(--spacing-scale-xs);
  --spacing-scale-2xl: 3rem;
  --spacing-scale-lg: 1.5rem;
  --spacing-scale-md: 1rem;
  --spacing-scale-sm: 0.5rem;
  --spacing-scale-xl: 2rem;
  --spacing-scale-xs: 0.25rem;
}


/* Set: effects */
/* Shadows and elevation */
:root {
  /* High elevation (modals, dialogs) */
  --shadow-elevation-lg: var(--shadow-raw-lg);
  /* Medium elevation (dropdowns, popovers) */
  --shadow-elevation-md: var(--shadow-raw-md);
  /* Low elevation (cards, inputs) */
  --shadow-elevation-sm: var(--shadow-raw-sm);
  /* Large shadow for modals and dialogs */
  --shadow-raw-lg: var(--shadow-raw-lg-offsetX) var(--shadow-raw-lg-offsetY)
    var(--shadow-raw-lg-blur) var(--shadow-raw-lg-spread)
    var(--shadow-raw-lg-color);
  --shadow-raw-lg-color: #0000001a;
  --shadow-raw-lg-offsetX: 0px;
  --shadow-raw-lg-offsetY: 10px;
  --shadow-raw-lg-blur: 15px;
  --shadow-raw-lg-spread: -3px;
  /* Medium shadow for dropdowns and popovers */
  --shadow-raw-md: var(--shadow-raw-md-offsetX) var(--shadow-raw-md-offsetY)
    var(--shadow-raw-md-blur) var(--shadow-raw-md-spread)
    var(--shadow-raw-md-color);
  --shadow-raw-md-color: #0000001a;
  --shadow-raw-md-offsetX: 0px;
  --shadow-raw-md-offsetY: 4px;
  --shadow-raw-md-blur: 6px;
  --shadow-raw-md-spread: -1px;
  /* Subtle shadow for cards and inputs */
  --shadow-raw-sm: var(--shadow-raw-sm-offsetX) var(--shadow-raw-sm-offsetY)
    var(--shadow-raw-sm-blur) var(--shadow-raw-sm-spread)
    var(--shadow-raw-sm-color);
  --shadow-raw-sm-color: #0000000d;
  --shadow-raw-sm-offsetX: 0px;
  --shadow-raw-sm-offsetY: 1px;
  --shadow-raw-sm-blur: 2px;
  --shadow-raw-sm-spread: 0px;
}


/* Modifier: theme=light (default) */
/* Theme variations */
:root {
  /* Light page background */
  --color-background-default: var(--color-palette-white);
  /* Light border color */
  --color-border-default: var(--color-palette-gray-300);
  /* Light surface for cards */
  --color-surface-default: var(--color-palette-gray-100);
  /* Dark text on light background */
  --color-text-default: var(--color-palette-gray-900);
  /* Muted text on light background */
  --color-text-muted: var(--color-palette-gray-500);
}


/* Modifier: theme=dark */
[data-theme="dark"] {
  /* Dark page background */
  --color-background-default: var(--color-palette-gray-900);
  /* Dark border color */
  --color-border-default: var(--color-palette-gray-700);
  /* Dark surface for cards */
  --color-surface-default: var(--color-palette-gray-700);
  /* Light text on dark background */
  --color-text-default: var(--color-palette-gray-100);
  /* Muted text on dark background */
  --color-text-muted: var(--color-palette-gray-400);
}
",
}
`;
